# zstd-tx-bench

./: Cargo.toml  README.md  transaction_data.hex
benches/: zstd_benchmark.rs
src/: compare_compression.rs  seed_data.rs
txs/: tx1.hex  tx10.hex  tx2.hex  tx3.hex  tx4.hex  tx5.hex  tx6.hex  tx7.hex  tx8.hex  tx9.hex
