[package]
name = "zstd-tx-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = "0.5.1"
zstd = "0.13.2"
tokio = { version = "1.40.0", features = ["full"] }
alloy = { version = "0.3.6", features = ["full"] }
anyhow = "1.0.89"

[[bench]]
name = "zstd_benchmark"
harness = false

[[bin]]
name = "seed_data"
path = "src/seed_data.rs"

[[bin]]
name = "compare_compression"
path = "src/compare_compression.rs"
